--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
-<body></body>
+<body>
 
+<!--<div class="bg-danger px-5" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);">-->
+<!--    <div class="col-12">-->
+<!--        <div class="row">-->
+<!--            <div class="form-group my-3">-->
+<!--                <label for="exampleInputEmail1">Name</label>-->
+<!--                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="John Doe">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-12 text-center">-->
+<!--        <h5>Players In Lobby</h5>-->
+<!--        <ul class="list-group" id="players_list">-->
+<!--&lt;!&ndash;            <li class="list-group-item"></li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li class="list-group-item"></li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li class="list-group-item"></li>&ndash;&gt;-->
+<!--&lt;!&ndash;            <li class="list-group-item"></li>&ndash;&gt;-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--    <button type="button" class="btn btn-primary" id="start_game">Play</button>-->
+<!--</div>-->
+
+
+</body>
+
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <script src="sounds/GunsSounds.js"></script>
 <script src="sketch.js"></script>
 <script src="OtherPlayer.js"></script>
